[package]
name = "vpn_client"
version = "0.0.7"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A client for a local VPN instance."
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/vpn-client"
repository = "https://github.com/resolvingarchitecture/vpn-client"
publish = true
readme = "README.md"
keywords = ["vpn","vpn-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
failure = "0.1.5"
exitfailure = "0.5.1"

ra_common = "0.0.43"

#vpncloud = "1.0.0"

[dev-dependencies]
assert_cmd = "0.10"
